Fixed font sizing for multi-screen readability

--- a/css/theme-gunmetal.css
+++ b/css/theme-gunmetal.css
@@ -46,7 +46,7 @@ body {
   font-size: 18px;
   line-height: 24px;
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #666;
+  color: #333;
   overflow-x: hidden;
 }
 body.boxed-layout {
@@ -554,7 +554,7 @@ ul.lead li {
   background: #292929;
 }
 .color-body {
-  color: #666;
+  color: #333;
 }
 .color-primary {
   color: #333347 !important;
